--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
     <title>My Profile Page</title>
   </head>
   <body>
-    <h1>Heading 1</h1>
+    <h1>my profile page</h1>
     <p>This is my frist paragraph</p>
   </body>
 </html>
