--- a/week5/index.html
+++ b/week5/index.html
@@ -2,7 +2,8 @@
 
 <head>
   <link href="main.css" rel="stylesheet">
-  <title>Week 4: DIG103 - Wireframe Development</title>
+  <meta=charset "UTF=8">
+  <title>my profile site</title>
 </head>
 
 <body>
