--- a/week5/index.html
+++ b/week5/index.html
@@ -10,13 +10,14 @@
 
 <div class="main">
   <div class="header">
-
+    <h1>this is a header</>
+      
   </div>
   <div class="menu">
-    <div class="button"> </div>
-    <div class="button"> </div>
-    <div class="button"> </div>
-    <div class="button"> </div>
+    <div class="button">Home page</div>
+    <div class="button">FAQ</div>
+    <div class="button">returns</div>
+    <div class="button">New Stuff</div>
   </div>
 
   <div class="hero">
