--- a/week5/index.html
+++ b/week5/index.html
@@ -18,6 +18,7 @@
     <div class="button">FAQ</div>
     <div class="button">returns</div>
     <div class="button">New Stuff</div>
+    <div class="button">comments</div>
   </div>
 
   <div class="hero">
@@ -36,5 +37,5 @@
 
 </div>
 
-
+<footer>
 </body>
