--- a/week5/index.html
+++ b/week5/index.html
@@ -14,9 +14,9 @@
       
   </div>
   <div class="menu">
-    <div class="button">Home page</div>
-    <div class="button">FAQ</div>
-    <div class="button">returns</div>
+    <div class="button"><a href="index.html">Home page</a></div>
+    <div class="button"><a href="profil.html"></a>FAQ</div>
+    <div class="button"><a href="showcase"></a>returns</div>
     <div class="button">New Stuff</div>
     <div class="button">comments</div>
   </div>
