--- a/week5/index.html
+++ b/week5/index.html
@@ -11,7 +11,8 @@
 <div class="main">
   <div class="header">
     <h1>this is a header</>
-      
+     <img src="img/header.jpg">
+    
   </div>
   <div class="menu">
     <div class="button"><a href="index.html">Home page</a></div>
