--- a/week5/index.html
+++ b/week5/index.html
@@ -1,5 +1,5 @@
 <!doctype HTML>
-
+<a href="https://github.com/shaunb87/DIG103A/blob/master/index.html></a>
 <head>
   <link href="main.css" rel="stylesheet">
   <meta=charset "UTF=8">
