--- a/assessment.index.html
+++ b/assessment.index.html
@@ -14,10 +14,9 @@
 
   </div>
   <div class="eelbox">
-    <img src="eel.png" />
+    <img src="eel.png.png" />
   </div>
-
-  <div class="main">
+ <div class="main">
   </div>
 
   <div class="menu">
@@ -38,7 +37,7 @@
 </div>
 
 <div class="newbox">
-  <img src="phoneapp2.jpg" alt="download" />
+  <img src="phoneapp2.jpg.jpg" alt="download" />
   <img src="guitarist.jpg.jpg" alt="guitarist" />
   <img src="musicbolt.jpg.png" alt="bass" />
   <img src="artist.jpg.jpg" alt="artist "/>
