--- a/class.index.html
+++ b/class.index.html
@@ -2,4 +2,41 @@
 <html>         
 <meta charset="UTF=8>
 <head>
-               
+<title>Class Exercise<title>
+ <style>              
+.main1 {
+float: left;
+width: 300px;
+height: 300px;
+background-color: pink;
+.main2 {
+float: left;
+width: 300px;
+height: 300px;
+background-color: orange;               
+.main3 {
+float: left;
+width: 300px;
+height: 300px;
+background-color: blue;               
+.main4 {
+float: left;
+width: 300px;
+height: 300px;
+background-color: green;               
+ <style>              
+</head>               
+<body>
+<div class="main1">
+text here
+</div>                  
+<div class="main1">
+text here
+</div>    
+<div class="main1">
+text here
+</div>    
+<div class="main1">
+text here
+</div>    
+</body>                  
