--- a/class.index.html
+++ b/class.index.html
@@ -24,19 +24,19 @@ float: left;
 width: 300px;
 height: 300px;
 background-color: green;               
- <style>              
+ </style>              
 </head>               
 <body>
 <div class="main1">
 text here
 </div>                  
-<div class="main1">
+<div class="main2">
 text here
 </div>    
-<div class="main1">
+<div class="main3">
 text here
 </div>    
-<div class="main1">
+<div class="main4">
 text here
 </div>    
 </body>                  
