--- a/res.html
+++ b/res.html
@@ -31,6 +31,10 @@ background-color: green;
  </style>              
 </head>               
 <body>
+ @mediascreen and (min-width: 480px) {
+ <div class="main1">
+
+ 
 <div class="main1">
 text here
 </div>                  
