--- a/res.html
+++ b/res.html
@@ -31,7 +31,6 @@ background-color: green;
  </style>              
 </head>               
 <body>
- @mediascreen and (min-width: 480px) {
 
 <div class="main-1">
 text here
@@ -46,3 +45,4 @@ text here
 text here
 </div>    
 </body>                  
+ </html>
